转移笔记分享代码完成

--- a/writenote/src/main/res/layout/new_activity.xml
+++ b/writenote/src/main/res/layout/new_activity.xml
@@ -40,7 +40,16 @@
             android:textColor="@color/colorBlack"
             android:textSize="@dimen/moxi_text_size_24"
             android:textStyle="bold" />
-
+        <TextView
+            android:id="@+id/change_to_text"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@drawable/white_to_font"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="转换"
+            android:textColor="@color/colorBlack"
+            android:textSize="@dimen/title_right_size" />
         <ImageButton
             android:id="@+id/save_write"
             android:layout_width="wrap_content"
@@ -122,9 +131,9 @@
         android:layout_weight="1">
 
         <!--<com.moxi.writeNote.view.PaintBackView-->
-            <!--android:id="@+id/write_back"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent" />-->
+        <!--android:id="@+id/write_back"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent" />-->
 
         <com.moxi.handwritinglibs.WriteSurfaceViewDraw
             android:id="@+id/write_view"
