--- a/writenote/src/main/res/layout/pop_one_file_manager.xml
+++ b/writenote/src/main/res/layout/pop_one_file_manager.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="8dp"
     android:paddingRight="10dp"
     android:paddingTop="10dp">
-<!--  单个文件管理pop -->
+    <!--  单个文件管理pop -->
     <TextView
         android:id="@+id/export_pdf"
         android:layout_width="match_parent"
@@ -31,6 +31,18 @@
         android:padding="16dp"
         android:background="@drawable/white_to_font"
         android:text="导出图片"
+        android:textColor="@color/colorBlack"
+        android:textSize="@dimen/moxi_text_size_20" />
+    <TextView
+        android:id="@+id/share_photo"
+        android:layout_width="match_parent"
+        android:gravity="center_horizontal"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="12dp"
+        android:padding="16dp"
+        android:background="@drawable/white_to_font"
+        android:text="分享笔记"
         android:textColor="@color/colorBlack"
         android:textSize="@dimen/moxi_text_size_20" />
     <TextView
